ready with controller and model

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "Jwt",
   "version": "1.0.0",
-  "description": "MVCapp",
+  "description": "Jwt",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
